--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     <artifactId>confluence-publisher</artifactId>
     <name>Confluence Publisher</name>
     <description>Publish build artifacts to an Atlassian Confluence wiki</description>
-    <version>2.0.3</version>
+    <version>2.0.3-jdk11</version>
     <packaging>hpi</packaging>
     <url>http://wiki.jenkins-ci.org/display/JENKINS/Confluence+Publisher+Plugin</url>
 
@@ -106,6 +106,11 @@
             <version>1.6.2</version>
             <type>jar</type>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.soap</groupId>
+            <artifactId>javax.xml.soap-api</artifactId>
+            <version>1.3.7</version>
         </dependency>
 
         <dependency>
